--- a/main/templates/create_application.html
+++ b/main/templates/create_application.html
@@ -13,8 +13,7 @@
         {% endif %}
         <nav>
             {% if user.is_authenticated %}
-                <a href="/applications/create/">Создать заявку</a>
-                | <a href="#">Мои заявки</a>
+                <a href="#">Мои заявки</a>
                 | <a href="/logout/">Выйти</a>
             {% else %}
                 <a href="/login/">Вход</a>
@@ -25,16 +24,11 @@
     </header>
 
     <main>
-        <h2>Добро пожаловать в дизайн-студию Design.pro</h2>
-        <p>Загружайте планы помещений и получайте профессиональные дизайн-проекты.</p>
-        <hr>
-        <div>
-            <h3>Заявок в работе:</h3>
-        </div>
-
-        <div>
-            <h3>Последние выполненные работы:</h3>
-        </div>
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Создать заявку</button>
+        </form>
     </main>
 </body>
 </html>
