add all applications, delete

--- a/main/templates/create_application.html
+++ b/main/templates/create_application.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Создание заявки - Design.pro</title>
+    <title>Создание заявки</title>
     <style>
         .form-field { margin: 15px 0; }
         .error { color: red; }
