--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Design.pro - Главная</title>
+    <title>Главная</title>
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
         <nav>
             {% if user.is_authenticated %}
                 <a href="/applications/create/">Создать заявку</a>
-                | <a href="#">Мои заявки</a>
+                | <a href="my-applications/">Мои заявки</a>
                 | <a href="/logout/">Выйти</a>
             {% else %}
                 <a href="/login/">Вход</a>
