--- a/main/templates/edit_application.html
+++ b/main/templates/edit_application.html
@@ -3,20 +3,22 @@
 {% block title %}Редактировать заявку{% endblock %}
 
 {% block content %}
+<div class="form-card">
     <h2>Изменить статус заявки: {{ application.title }}</h2>
 
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {% for field in form %}
-            <div style="margin: 10px 0;">
+            <div class="form-field">
                 {{ field.label_tag }}
                 {{ field }}
                 {% if field.errors %}
-                    <div style="color: red;">{{ field.errors.0 }}</div>
+                    <div class="error">{{ field.errors.0 }}</div>
                 {% endif %}
             </div>
         {% endfor %}
-        <button type="submit">Сохранить</button>
-        <a href="{% url 'admin_applications' %}">Отмена</a>
+        <button type="submit" class="submit-btn">Сохранить</button>
+        <a  class="cancel-btn" href="{% url 'admin_applications' %}">Отмена</a>
     </form>
+</div>
 {% endblock %}
